little backend refactor to better understand SSE

--- a/frontend/src/pages/whiteboard.astro
+++ b/frontend/src/pages/whiteboard.astro
@@ -19,6 +19,7 @@ import WhiteboardComponent from "../c/Whiteboard.svelte";
 		</div>
 		<div class='container'>
 			<div class='box'>
+				<p>Work in progress. For now, simplified canvas.</p>
 				<WhiteboardComponent client:only />
 				<p class='margin-top'>You can also try a <a href='/'>simple events</a> sent from server.</p>
 			</div>
